# audio_data_decoder

./: .gitignore  CMakeLists.txt  README.md  audio_data.h  audio_data_reader.cpp  audio_data_reader.h  audio_data_reader.hpp  file.json  file1.json  json_struct.txt  main.cpp
include/audio_data_decoder/: audio_data.h
src/: audio_data_reader.cpp
